--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       branch:
         description: Branch to deploy
         required: false
-        default: master
+        default: main  # Updated to 'main' for consistency
       testing:
         description: Testing workflow
         required: false
@@ -25,24 +25,47 @@ jobs:
       REGISTRY: docker.io
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Docker login
-      run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ env.REGISTRY }} -u "${{ secrets.DOCKER_USER }}" --password-stdin
-    - name: Build DockerSnap Image
-      run: |
-        # Assuming Dockerfile is in the root and DockerSnap.sh is correctly placed
-        docker build . -t ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
-    - name: Docker push (conditional)
-      if: github.event.inputs.testing == 'false' && github.event.inputs.branch == 'master'
-      run: |
-        docker push ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
-    - name: Cleanup Docker Images
-      run: |
-        docker image prune -a --force
-    - name: Add summary details
-      if: always()
-      run: |
-        echo "## Summary Details" >> $GITHUB_STEP_SUMMARY
-        echo "* Docker Image: ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest" >> $GITHUB_STEP_SUMMARY
-        echo "* Branch: ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
+      # Step 1: Checkout the repository
+      - uses: actions/checkout@v3
+
+      # Step 2: Docker login
+      - name: Docker login
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ env.REGISTRY }} -u "${{ secrets.DOCKER_USER }}" --password-stdin
+
+      # Step 3: Build DockerSnap Image
+      - name: Build DockerSnap Image
+        run: |
+          # Assuming Dockerfile is in the root and DockerSnap.sh is correctly placed
+          docker build . -t ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+
+      # Step 4: Docker push (conditional)
+      - name: Docker push (conditional)
+        if: >
+          (github.event_name == 'workflow_dispatch' &&
+           github.event.inputs.testing == false &&
+           github.event.inputs.branch == 'main') ||
+          (github.event_name == 'push' &&
+           github.ref == 'refs/heads/main')
+        run: |
+          docker push ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+
+      # Step 5: Cleanup Docker Images
+      - name: Cleanup Docker Images
+        run: |
+          docker image prune -a --force
+
+      # Step 6: Add summary details
+      - name: Add summary details
+        if: always()
+        run: |
+          echo "## Summary Details" >> $GITHUB_STEP_SUMMARY
+          echo "* Docker Image: ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest" >> $GITHUB_STEP_SUMMARY
+
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "* Branch: ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
+            echo "* Testing: ${{ github.event.inputs.testing }}" >> $GITHUB_STEP_SUMMARY
+          elif [[ "${{ github.event_name }}" == "push" ]]; then
+            # Extract branch name from 'refs/heads/main' -> 'main'
+            echo "* Branch: ${GITHUB_REF##*/}" >> $GITHUB_STEP_SUMMARY
+          fi
