--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build DockerSnap Image
+name: Build and Push DockerSnap Image
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
       branch:
         description: Branch to deploy
         required: false
-        default: main  # Updated to 'main' for consistency
+        default: main
       testing:
         description: Testing workflow
         required: false
@@ -22,50 +22,60 @@ on:
 jobs:
   build-and-push:
     env:
-      REGISTRY: docker.io
+      DOCKER_REGISTRY: docker.io
+      DS_GITHUB_REGISTRY: ghcr.io
     runs-on: ubuntu-latest
     steps:
       # Step 1: Checkout the repository
       - uses: actions/checkout@v3
 
-      # Step 2: Docker login
-      - name: Docker login
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login ${{ env.REGISTRY }} -u "${{ secrets.DOCKER_USER }}" --password-stdin
+      # Step 2: Set up QEMU and Docker Buildx (optional, for multi-platform builds)
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
-      # Step 3: Build DockerSnap Image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Login to Docker Hub
+      - name: Docker Hub Login
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Login to GitHub Container Registry
+      - name: GitHub Container Registry Login
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.DS_GITHUB_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 5: Build DockerSnap Image
       - name: Build DockerSnap Image
         run: |
-          # Assuming Dockerfile is in the root and DockerSnap.sh is correctly placed
-          docker build . -t ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+          # Build the Docker image
+          docker build . -t ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+          docker tag ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest ${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}/dockersnap:latest
 
-      # Step 4: Docker push (conditional)
-      - name: Docker push (conditional)
-        if: >
-          (github.event_name == 'workflow_dispatch' &&
-           github.event.inputs.testing == false &&
-           github.event.inputs.branch == 'main') ||
-          (github.event_name == 'push' &&
-           github.ref == 'refs/heads/main')
+      # Step 6: Push DockerSnap Image to Docker Hub and GitHub Container Registry
+      - name: Push DockerSnap Image
         run: |
-          docker push ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+          docker push ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest
+          docker push ${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}/dockersnap:latest
 
-      # Step 5: Cleanup Docker Images
+      # Step 7: Cleanup Docker Images
       - name: Cleanup Docker Images
         run: |
           docker image prune -a --force
 
-      # Step 6: Add summary details
-      - name: Add summary details
+      # Step 8: Add summary details
+      - name: Add Summary Details
         if: always()
         run: |
           echo "## Summary Details" >> $GITHUB_STEP_SUMMARY
-          echo "* Docker Image: ${{ env.REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest" >> $GITHUB_STEP_SUMMARY
-
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "* Branch: ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
-            echo "* Testing: ${{ github.event.inputs.testing }}" >> $GITHUB_STEP_SUMMARY
-          elif [[ "${{ github.event_name }}" == "push" ]]; then
-            # Extract branch name from 'refs/heads/main' -> 'main'
-            echo "* Branch: ${GITHUB_REF##*/}" >> $GITHUB_STEP_SUMMARY
-          fi
+          echo "* Docker Image (Docker Hub): [${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest](https://${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap)" >> $GITHUB_STEP_SUMMARY
+          echo "* Docker Image (GitHub): [${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}/dockersnap:latest](https://${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}/dockersnap)" >> $GITHUB_STEP_SUMMARY
+          echo "* Branch: ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "* Testing: ${{ github.event.inputs.testing }}" >> $GITHUB_STEP_SUMMARY
