--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -62,7 +62,7 @@ jobs:
           docker buildx create --use
           docker buildx build . --platform linux/amd64,linux/arm64 \
             -t ${{ env.DOCKER_REGISTRY }}/${{ secrets.DOCKER_USER }}/dockersnap:latest \
-            -t ${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}/dockersnap:latest \
+            -t ${{ env.DS_GITHUB_REGISTRY }}/${{ github.repository_owner }}dockersnap:latest \
             --push   # Push the image directly after build to avoid separate push step
 
       # Step 6: Add summary details
