Fix auto-merge condition to correctly identify Dependabot actors

--- a/.github/workflows/auto-merge-dependabot.yml
+++ b/.github/workflows/auto-merge-dependabot.yml
@@ -13,7 +13,7 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     if: |
-      github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+      github.actor == 'dependabot[bot]' || 'dependabot' || github.actor == 'dependabot-preview[bot]'
 
     steps:
       # Step 1: Checkout the repository
