--- a/.github/workflows/add-compatibility-label.yml
+++ b/.github/workflows/add-compatibility-label.yml
@@ -10,7 +10,7 @@ jobs:
   add_compatibility_label:
     runs-on: ubuntu-latest
     if: |
-      github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+      github.actor == 'dependabot' || github.actor == 'dependabot-preview[bot]'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
