--- a/.github/workflows/add-compatibility-label.yml
+++ b/.github/workflows/add-compatibility-label.yml
@@ -1,16 +1,24 @@
 name: Add Compatibility Label to Dependabot PRs
 
 on:
-  pull_request:
+  workflow_dispatch:  # Allows manual trigger
+  pull_request:       # Automatically triggers on PR events
     types: [opened, synchronize]
     branches:
       - main  # Adjust if your default branch is different
+
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
 
 jobs:
   add_compatibility_label:
     runs-on: ubuntu-latest
     if: |
-      github.actor == 'dependabot' || github.actor == 'dependabot-preview[bot]'
+      github.event_name == 'workflow_dispatch' ||
+      github.actor == 'dependabot[bot]' ||
+      github.actor == 'dependabot-preview[bot]'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
